--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,11 @@
   --font-mono: var(--font-geist-mono);
 }
 
+/* 
+primary: #d8e373
+secondary: #9b6af1 
+*/
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -19,9 +24,9 @@
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
+    --primary: 66, 67%, 67%;
     --primary-foreground: 0 0% 98%;
-    --secondary: 0 0% 96.1%;
+    --secondary: 262, 83%, 68%;
     --secondary-foreground: 0 0% 9%;
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
@@ -46,9 +51,9 @@
     --card-foreground: 0 0% 98%;
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
+    --primary: 66, 67%, 67%;
     --primary-foreground: 0 0% 9%;
-    --secondary: 0 0% 14.9%;
+    --secondary: 262, 83%, 68%;
     --secondary-foreground: 0 0% 98%;
     --muted: 0 0% 14.9%;
     --muted-foreground: 0 0% 63.9%;
